--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import HomeLayout from '@/layouts/HomeLayout.astro';
 import Main from '@/components/Main.astro';
-import '../styles/custom.css';
+import '../styles/base.css';
 ---
 <HomeLayout>
     <Main />
